--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "dev": "NODE_ENV=development node server.js",
     "test": "jest --runInBand --detectOpenHandles",
     "build": "next build",
-    "start": "NODE_OPTIONS='--openssl-legacy-provider' NODE_ENV=production node server.js",
+    "start": "NODE_ENV=production node server.js",
     "lint": "eslint"
   },
   "dependencies": {
