fix: ejecutar node directamente sin npm para evitar cache

--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,10 @@
 [build]
 builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
+watchPatterns = ["**"]
 
 [deploy]
-startCommand = "npm start"
+startCommand = "node create-google-credentials.js && node server.js"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
